# kale-app-core

./: .gitignore  Cargo.toml  KaleMakefile  README.md  app.toml  go.mod  go.sum  init_node.sh  simple_start.sh  simplified_test.sh  start_kale.sh  start_node.sh  test_contracts.sh  testing-script.sh
app/: encoding.go  genesis.go  kale-app.go
cmd/kaleficli/: main.go
cmd/kalefid/: debug_keyring.go  main.go
config/: app.toml  config.toml  genesis.json  node_key.json  priv_validator_key.json
contracts/amm/src/: contract.rs  msg.rs  state.rs
contracts/kale-amm/: Cargo.toml
contracts/kale-amm/src/: kale_contract.rs  kale_msg.rs  kale_state.rs  lib.rs
contracts/kale-amm/tests/: kale-integration.rs
contracts/kale-rewards/: Cargo.toml  README.md
contracts/kale-rewards/src/: error.rs  kale-lib.rs  kale-msg.rs  kale-state.rs  kale_contract.rs  kale_lib.rs  kale_msg.rs  kale_state.rs  lib.rs  msg.rs  state.rs
contracts/kale-rewards/tests/: kale-integration.rs
contracts/kale-social/: Cargo.toml
contracts/kale-social/src/: contract.rs  kale_contract.rs  kale_msg.rs  kale_state.rs  lib.rs  msg.rs
contracts/kale-social/tests/: kale-integration.rs
contracts/social/: Cargo.toml
contracts/social/src/: contract.rs  lib.rs  msg.rs  state.rs
contracts/social/tests/: kale-integration.rs
data/application.db/: LOG
deploy/: README.md  hetzner-docker-compose.yml
docs/: spec.md
modules/kale-bank/: README.md  genesis.go  kale-keeper.rs  kale-mod.rs  kale-types.rs  module.go  params.go
modules/kale-bank/keeper/: keeper.go  keeper_test.go  querier.go
modules/kale-bank/types/: expected_keepers.go  genesis.go  keys.go  params.go  querier.go  token.go  types.pb.go
modules/kalefi/: README.md  kale-keeper.rs  kale-mod.rs  kale-types.rs  module.go
modules/kalefi/keeper/: genesis.go  keeper.go  keeper_test.go
modules/kalefi/types/: errors.go  expected_keepers.go  genesis.go  keys.go  params.go  trade_event.go
modules/socialdex/: genesis.go  module.go
modules/socialdex/keeper/: keeper.go
modules/socialdex/types/: codec.go  expected_keepers.go  genesis.go  keys.go  params.go  types.go  types.pb.go
proto/: kale-buf.gen.yaml  kalefi.proto
