[package]
name = "kale-social"
version = "0.1.0"
authors = ["KaleFi Team <team@kalefi.com>"]
edition = "2021"
description = "Social trading contract for KaleFi platform"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = "1.5.0"
cosmwasm-schema = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
cw-storage-plus = "1.1.0"
schemars = "0.8.15"

[dev-dependencies]
cw-multi-test = "0.17.0"
